src/scss/components/_Layout.scss
.main-container {
  height: 100%;
  padding: 5rem 64px 2rem 64px;

  overflow-y: auto;
  overflow-x: hidden;

  &::-webkit-scrollbar {
    width: 5px;
  }
  &::-webkit-scrollbar-track {
    background: RGBA(48, 48, 48, 0);
  }
  &::-webkit-scrollbar-thumb {
    background: $gray-strong;
  }
  &::-webkit-scrollbar-thumb:hover {
    background-color: $primary-hover;
  }
}

@media screen and (max-width: 899px) {
  .main-container {
    padding: 5rem 8px 2rem 8px;
  }
}

